# beerleague_scoreboard

./: CMakeLists.txt  Main.qml  main.cpp
res/fonts/: fonts.qrc
res/sounds/: sounds.qrc
src/: Score.qml
